@@ -1,5 +1,5 @@
 P: control-file-duplicate source: duplicate-in-relation-field in control-file-duplicate depends: ${misc:Depends}, ${misc:Depends}
 P: control-file-duplicate source: duplicate-in-relation-field in control-file-duplicate suggests: baz (= 1.0), baz, baz (>= 2.0)
 P: control-file-duplicate source: duplicate-in-relation-field in source build-conflicts: bar, bar [i386]
-P: control-file-duplicate source: duplicate-in-relation-field in source build-depends-indep: cdbs, cdbs
+P: control-file-duplicate source: duplicate-in-relation-field in source build-depends-indep: foobar, foobar
 P: control-file-duplicate source: duplicate-in-relation-field in source build-depends: debhelper (>= 7.0.50~), debhelper
