@@ -3,17 +3,11 @@ Priority: extra
 Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-Build-Depends: debhelper (>= 7.0.50~), debhelper
-Build-Depends-Indep: foobar, foo, foobar
-Build-Conflicts: bar,
- baz,
- bar [i386]
+Build-Depends: debhelper (>= 7), cdbs
 
 Package: {$srcpkg}
 Architecture: {$architecture}
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, $\{misc:Depends\}
-Recommends: foo (>> 1.0) | bar, foo
-Suggests: baz (= 1.0), baz, baz (>= 2.0)
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
