@@ -1,0 +1,5 @@
+Testname: debhelper-unused-cdbs
+Sequence: 6000
+Version: 1.0
+Description: Test for unused build-depends on cdbs
+Test-For: unused-build-dependency-on-cdbs
